<resources>
    <string name="app_name">ReadBook</string>
    <string name="unLogin">未登录</string>
    <string name="myBookList">我的书架</string>
    <string name="myRead">我的阅历</string>
    <string name="myDynamic">我的动态</string>
    <string name="setting">设置</string>
    <string name="wholeContent">完整目录</string>
    <string name="freeRank">免费榜</string>
    <string name="wholeReview">全部书评</string>
    <string name="messagePush">消息推送</string>
    <string name="bindTel">绑定手机</string>
    <string name="clearCache">清除缓存</string>
    <string name="evaluationUS">评价我们</string>
    <string name="signOut">退出账号</string>
    <string name="tel">手机号码</string>
    <string name="verificationCode">验证码</string>
    <string name="login">登录</string>
    <string name="forgetPass">忘记密码</string>
    <string name="tourist">游客浏览</string>
    <string name="qqOrWeChat">社交账号登录</string>
    <string name="loginByQQ">QQ登录</string>
    <string name="loginByWeChat">微信登录</string>
    <string name="post">发表</string>
    <string name="bookCity">书城</string>
    <string name="classification">分类</string>
    <string name="Ranking">排行</string>
    <string name="community">社区</string>
    <string name="fantasy">玄幻</string>
    <string name="scienceFiction">科幻</string>
    <string name="romance">言情</string>
    <string name="suspense">恐怖</string>
    <string name="cityBook">都市</string>
    <string name="youth">青春</string>
    <string name="throughBook">穿越</string>
    <string name="martialArts">武侠</string>
    <string name="onlineGame">网游</string>
    <string name="others">其他</string>
    <string name="obtain">获取</string>
    <string name="contents">目录</string>
    <string name="bookmark">书签</string>
    <string name="book">小说</string>
    <string name="todo">TODO</string>
    <string name="password">密码</string>
    <string name="register">注册账号</string>
    <string name="writeComment">写评论</string>
    <string name="submit">提交</string>
    <string name="addToBookShelf">加入书架</string>
</resources>
