<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.Login.ui.RegisterActivity"
    android:orientation="vertical">
    <include layout="@layout/headbar"/>

    <EditText
        android:layout_gravity="center"
        android:id="@+id/register_edtinputtel"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/edt_inputtel"
        android:hint="@string/tel"
        android:inputType="number"
        android:maxLength="11"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:layout_gravity="center"
        android:id="@+id/register_edtinputPass"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_inputtel"
        android:hint="@string/password"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry" />
<RelativeLayout
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="20dp">
    <EditText
        android:layout_gravity="center"
        android:id="@+id/register_inputnumber"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/edt_inputtel"
        android:hint="@string/verificationCode"
        android:inputType="number"
        android:paddingStart="30dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/register_edtbutton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/editbutton"
        android:text="@string/obtain"
        android:textColor="@color/colorRed" />
</RelativeLayout>
    
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/redbuttom"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:id="@+id/register_btnregister"/>

</LinearLayout>
