<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/headbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:id="@+id/setting_message_push"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="#333"
            android:layout_weight="1"
            android:layout_marginStart="18dp"
            android:gravity="center|left"
            android:text="@string/messagePush"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/activity_setting_kaiqi"
            android:layout_marginRight="18dp"
            android:text="未开启"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:id="@+id/setting_bindTel"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textColor="#333"
            android:id="@+id/myFrontTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/bindTel"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/list_more"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_clear_cache"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="18dp">
        <TextView
            android:textColor="#333"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/clearCache"
            android:layout_gravity="center"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.58M"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/list_more"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:id="@+id/setting_feedback"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textColor="#333"
            android:id="@+id/myFrontTextView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/evaluationUS"
            android:layout_gravity="center"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/list_more"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/setting_signOut"
        android:textColor="#FF6B6B"
        android:text="@string/signOut"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>